# rag-document-chat

./: .replit  README.md  app.py  config.py  models.py  pyproject.toml  replit.md
attached_assets/: Pasted-Azure-AI-Search-client-library-for-Python-version-11-5-3-06-25-2025-Azure-AI-Search-formerly-kn-1755845307032_1755845307033.txt  Pasted-Build-a-Flask-web-application-that-implements-a-Retrieval-Augmented-Generation-RAG-system-using-Az-1755845172838_1755845172841.txt  Pasted-import-logging-from-azure-ai-formrecognizer-import-DocumentAnalysisClient-from-azure-core-credential-1755846050026_1755846050027.txt
instance/: rag_app.db
routes/: chat.py  documents.py  main.py
services/: azure_search.py  document_intelligence.py  document_processor.py  groq_llm.py
static/css/: style.css
static/js/: main.js
templates/: base.html  chat.html  documents.html  index.html
